--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     background-color: #1f4a89;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     justify-content: space-between;
 
     &__view {
@@ -42,6 +42,7 @@
     display: flex;
     height: 100%;
     width: 100%;
+    min-width: 100%;
     justify-content: space-between;
     align-items: center;
     padding: 15% 5% 10%;
@@ -59,6 +60,7 @@
             padding: 16px 28px;
             border-radius: 16px;
             width: 100%;
+            min-width: 100%;
             height: 150px;
             justify-content: space-between;
 
@@ -146,4 +148,10 @@
     display: flex;
     height: 100%;
     width: 100%;
+}
+
+.loading {
+    height: 100%;
+    width: 100%;
+    background-color: black;
 }
